--- a/網站 (1).html
+++ b/網站 (1).html
@@ -12,75 +12,54 @@
     	img{border-rodius: 50%;eidth: 400px;height: 400px;}
     	.main_banner{border-radius: 20px;wudth: 1024px;height: 350px}
     	.main_tittle{font-size: 40px;}
-     </style>
-  <head> 
-  <body>
-  	<dive>
-  	<table border="1">	
+    </style>
+</head>    
+<body>
+	<dive>
+	<table border="1">	
 		<tr>
 			<td colspan="2">
-			    <font>台中市景點推薦</font>
-			    </td>
-	    </tr>
-		<tr>
-			<td colspan="2">
-			<img class="main_banner"  width="1024px" src="00taichung.jpeg">
-			</td>
+			台中景點推薦
 			
-</tr>
+		</tr>
 		<tr>
-
-		
-
-			
-           <td colspan="2">
-			<img class="main_banner"  width="1024px" src="00taichung.jpeg">
+        <td colspan="2">
+			<img width="1024px" src="00taichung.jpeg">
 			</td>
 		</tr>
 		<tr>	
 			<td colspan="2">
-			    <font>臺中市</font>
-
-			<p>臺中市，通稱臺中，簡稱「中」，為中華民國直轄市，臺灣六都之一，也是中臺灣唯一的直轄市。周邊與臺灣省的六個縣相鄰，北鄰苗栗縣、新竹縣，南鄰彰化縣、南投縣，東隔中央山脈與花蓮縣相鄰，東北以中央山脈和雪山山脈毗鄰宜蘭縣，西臨臺灣海峽。
+			臺中市
+			臺中市，通稱臺中，簡稱「中」，為中華民國直轄市，臺灣六都之一，也是中臺灣唯一的直轄市。周邊與臺灣省的六個縣相鄰，北鄰苗栗縣、新竹縣，南鄰彰化縣、南投縣，東隔中央山脈與花蓮縣相鄰，東北以中央山脈和雪山山脈毗鄰宜蘭縣，西臨臺灣海峽。
 			</td>
 		</tr>
         <tr>
         	<td><img src="01.jpeg"></td>
         	<td>
-        		 <font>台中國家歌劇院</font>
-        		<p>台中國家歌劇院位於台中市西屯區，是極具特色的大型公有展演空間，由日本建築師伊東豊雄設計，以人類最原始的「洞窟」、「地穴」的概念設計成世界獨一無二的美聲涵洞曲牆建築，歷時五年時間完成、耗資43.6億元，終在2014年11月23日落成啟用，內部規劃有大劇院、中劇院及小型實驗劇場，共可容納約三千餘人。
+        		台中國家歌劇院
+        		台中國家歌劇院位於台中市西屯區，是極具特色的大型公有展演空間，由日本建築師伊東豊雄設計，以人類最原始的「洞窟」、「地穴」的概念設計成世界獨一無二的美聲涵洞曲牆建築，歷時五年時間完成、耗資43.6億元，終在2014年11月23日落成啟用，內部規劃有大劇院、中劇院及小型實驗劇場，共可容納約三千餘人。
         	</td>
         </tr>
         <tr>
+        	<td><img src="02.jpeg"></td>
         	<td>
-        		<font>臺中州廳</font>
-        		<p>臺中州廳位於台中市西區，為一座國定古蹟，二戰後由台中市政府遷入辦公，由於該建築原為日治時期的臺中州廳（即「州政府」），因而沿用此稱呼。周邊鄰近台中文學公園、台中刑務所演武場、宮原眼科等熱門景點。
-        </td>
-        <td>
-            <img src="02.jpeg">
-        </td>
-   
-    </tr>
-    <tr>
-	    <td>
-	        <img src="03.jpeg">
-        </td>
-        <td>
-        	<font>審計新村</font>
-            <p>審計新村位於台中市西區，原為臺灣省政府審計處員工宿舍，在凍省之後成了閒置空間荒廢多年，近年配合台中市政府勞工局「摘星青年、築夢台中」創業基地進駐計畫，重新規劃轉型成為創業基地與文創園區。
-	
-        </td>
-    </tr>
-    <tr>
-       <td colspan="2">
-				靜宜大學 王錦鈺老師製作 2022
-
-            </td>
+        		臺中州廳
+        		臺中州廳位於台中市西區，為一座國定古蹟，二戰後由台中市政府遷入辦公，由於該建築原為日治時期的臺中州廳（即「州政府」），因而沿用此稱呼。周邊鄰近台中文學公園、台中刑務所演武場、宮原眼科等熱門景點。
         </tr>
-     </table>
+        <tr>
+        	<td><img src="03.jpeg"></td>
 
-<div>
+   
+
+	  
+	 <style>
+     
 	
+ </head>
+ <body>
+			<td colspan="2">
+				
+			</td>
 		</tr>
 		<tr>
 			<td colspan="2">
